<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/news_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_news_ico"
        android:contentDescription="@string/body_image_news"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/news_topic"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/news_image"
        app:layout_constraintRight_toRightOf="@id/news_image"
        app:layout_constraintTop_toBottomOf="@id/news_image" />

    <TextView
        android:id="@+id/news_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:breakStrategy="high_quality"
        android:gravity="center"
        android:text="@string/body_name_news"
        android:textAlignment="gravity"
        android:textColor="@color/light_green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/news_topic"
        app:layout_constraintLeft_toRightOf="@id/news_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/news_image" />

    <TextView
        android:id="@+id/news_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"
        android:text="@string/body_text_news"
        android:textColor="@color/light_green"
        app:autoSizeMinTextSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_name"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/news_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="right"
        android:hint="@string/body_author_news"
        android:text="@string/author"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_text" />

    <TextView
        android:id="@+id/news_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/body_author_news"
        android:text="@string/date"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_text" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/news_author"
        android:contentDescription="@string/splitter" />


</androidx.constraintlayout.widget.ConstraintLayout>